[package]
name = "marline_delta"
version.workspace = true
edition.workspace = true

[dependencies]
chunkfs = { git = "https://github.com/Piletskii-Oleg/chunkfs.git" }

rand = "0.10.1"
rayon = "1.10"
zstd = "0.13"
thiserror = "2.0.12"
huffman-compress = "0.6.1"
bit-vec = "0.6.3"
log = "0.4.27"
fasthash = "0.4.0"