[package]
name = "marline_palantir"
version.workspace = true
edition.workspace = true

[dependencies]
sha2 = "0.10"
fasthash.workspace = true
thiserror.workspace = true
log.workspace = true
rand.workspace = true
marline_sketcher = {path = "../marline_sketcher"}
chunkfs.workspace = true
zstd.workspace = true